Link to the bookmarked sites
I had to change `url` to `site_url` as `page.url` is used by Jekyll to
return the URL of the page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <h1>Bookmarks</h1>
 
 {% for bookmark in site.bookmarks reversed %}
-  <h2>{{ bookmark.title }}</h2>
+  <h2><a href="{{ bookmark.site_url }}">{{ bookmark.title }}</a></h2>
   {{ bookmark.content }}
 
   <hr>
